# pure-template

./: default.nix  pure-template.cabal
src/Pure/: Template.hs
