name:                pure-template
version:             0.7.0.0
synopsis:            String interpolating template macros
homepage:            github.com/grumply/pure-template
license:             BSD3
license-file:        LICENSE
author:              Sean Mackenzie
maintainer:          sean@grump.ly
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
      Main
      Pure.Template

  build-depends:
      base >=4.8
    , interpolate >= 0.2
    , haskell-src-meta >= 0.8
    , template-haskell >= 2.13

  hs-source-dirs:      src
  default-language:    Haskell2010
