name:                pure-template
version:             0.8.0.0
synopsis:            String interpolating template macros
homepage:            purehs.org/doc/pure-template
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-template.git

library
  exposed-modules:
      Pure.Template

  build-depends:
      base
    , pure-txt
    , pure-txt-interpolate
    , haskell-src-exts
    , haskell-src-meta
    , template-haskell

  hs-source-dirs:      src
  default-language:    Haskell2010
